--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,38 +27,50 @@ footer #authors {
   float: right; }
 
 .game-tile table {
-  width: 100%; }
+  width: 100%;
+  table-layout: fixed; }
+  .game-tile table tr {
+    overflow: visible; }
   .game-tile table td {
-    padding: 0;
-    background-size: 100% 100%; }
-    .game-tile table td[data-terr="0"] {
-      background-color: #060;
-      background-image: url(/static/img/sprites/grass.png); }
-    .game-tile table td[data-terr="1"] {
-      background-image: url(/static/img/sprites/rock.png);
-      background-color: #666; }
-    .game-tile table td[data-terr="2"] {
-      background-color: #33ADFF;
-      background-image: url(/static/img/sprites/water.png); }
-    .game-tile table td[data-terr="3"] {
-      background-image: url(/static/img/sprites/bridge.png);
-      background-color: #472400; }
-    .game-tile table td[data-terr="4"] {
-      background-image: url(/static/img/sprites/tallgrass.png);
-      background-color: #360; }
-    .game-tile table td[data-terr="5"] {
-      background-image: url(/static/img/sprites/road.png);
-      background-color: #C90; }
-    .game-tile table td[data-terr="6"] {
-      background-image: url(/static/img/sprites/sand.png);
-      background-color: #d6b55f; }
-    .game-tile table td.entrance {
-      background-color: black; }
-    .game-tile table td.exit {
-      background-image: none;
-      background-color: red; }
-    .game-tile table td.player {
-      background-image: url(/static/img/sprites/hero.png); }
+    position: relative;
+    padding: 0; }
+    .game-tile table td img {
+      position: absolute;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      width: 100%; }
+      .game-tile table td img[data-terr="0"] {
+        background-color: #060;
+        content: url(/static/img/sprites/grass.png); }
+      .game-tile table td img[data-terr="1"] {
+        background-color: #666;
+        content: url(/static/img/sprites/rock.png); }
+      .game-tile table td img[data-terr="2"] {
+        background-color: #33ADFF;
+        content: url(/static/img/sprites/water.png); }
+      .game-tile table td img[data-terr="3"] {
+        background-color: #472400;
+        content: url(/static/img/sprites/bridge.png); }
+      .game-tile table td img[data-terr="4"] {
+        background-color: #360;
+        content: url(/static/img/sprites/tallgrass.png); }
+      .game-tile table td img[data-terr="5"] {
+        background-color: #C90;
+        content: url(/static/img/sprites/road.png); }
+      .game-tile table td img[data-terr="6"] {
+        background-color: #d6b55f;
+        content: url(/static/img/sprites/sand.png); }
+      .game-tile table td img.player {
+        content: url(/static/img/sprites/player.png); }
+      .game-tile table td img.entrance {
+        background-color: black; }
+      .game-tile table td img.exit {
+        background-color: red; }
+  .game-tile table td {
+    background-color: #446d1c; }
+    .game-tile table td img[data-terr="7"] {
+      content: url(/static/img/sprites/tree.png); }
 
 #terrain-select.game-tile table {
   width: inherit;
