--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,26 @@ footer #authors {
         background-color: black; }
       .game-tile table td img.exit {
         background-color: red; }
+      .game-tile table td img.movePlayer {
+        content: url(/static/img/sprites/move.png); }
+        .game-tile table td img.movePlayer.right {
+          -ms-transform: rotate(180deg);
+          /* IE 9 */
+          -webkit-transform: rotate(180deg);
+          /* Chrome, Safari, Opera */
+          transform: rotate(180deg); }
+        .game-tile table td img.movePlayer.up {
+          -ms-transform: rotate(90deg);
+          /* IE 9 */
+          -webkit-transform: rotate(90deg);
+          /* Chrome, Safari, Opera */
+          transform: rotate(90deg); }
+        .game-tile table td img.movePlayer.down {
+          -ms-transform: rotate(270deg);
+          /* IE 9 */
+          -webkit-transform: rotate(270deg);
+          /* Chrome, Safari, Opera */
+          transform: rotate(270deg); }
   .game-tile table td {
     background-color: #446d1c; }
     .game-tile table td img[data-terr="7"] {
