--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2,6 +2,11 @@ $sitewidth: 800px;
 @mixin sprite($name) {
   content: url(/static/img/sprites/#{$name}.png);
 }
+@mixin rotate($amount) {
+  -ms-transform: rotate($amount); /* IE 9 */
+  -webkit-transform: rotate($amount); /* Chrome, Safari, Opera */
+  transform: rotate($amount);
+}
 
 html, body {
   margin: 0;
@@ -100,6 +105,19 @@ footer #authors {
         }
         &.exit {
           background-color: red;
+        }
+
+        &.movePlayer {
+          @include sprite(move);
+          &.right {
+            @include rotate(180deg);
+          }
+          &.up {
+            @include rotate(90deg);
+          }
+          &.down {
+            @include rotate(270deg);
+          }
         }
 
       }
