--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,19 +94,22 @@ footer #authors {
       .game-tile table td img[data-terr="7"] {
         content: url(/static/img/sprites/tree.png); }
   .game-tile #dialog {
+    display: none;
     position: absolute;
     top: 40px;
-    left: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
     width: 80%;
-    height: 200px;
     margin: 0 auto;
+    padding: 4%;
     background-color: #efefef;
     border: 10px solid transparent;
     -webkit-border-image: url("/static/img/border.png") 8 round;
     /* Safari 3.1-5 */
     -o-border-image: url("/static/img/border.png") 8 round;
     /* Opera 11-12.1 */
-    border-image: url("/static/img/border.png") 8 round; }
+    border-image: url("/static/img/border.png") 8 round;
+    text-align: center; }
 
 #terrain-select.game-tile table {
   width: inherit;
