--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,29 +66,60 @@ footer #authors {
         .game-tile table td img.player {
           content: url(/static/img/sprites/player.png); }
         .game-tile table td img.entrance {
-          background-color: black; }
+          content: url(/static/img/sprites/none.png); }
         .game-tile table td img.exit {
-          background-color: red; }
-        .game-tile table td img.movePlayer {
-          content: url(/static/img/sprites/move.png); }
-          .game-tile table td img.movePlayer.right {
+          background-color: #666;
+          content: url(/static/img/sprites/caveentrance.png); }
+          .game-tile table td img.exit.up {
             -ms-transform: rotate(180deg);
             /* IE 9 */
             -webkit-transform: rotate(180deg);
             /* Chrome, Safari, Opera */
             transform: rotate(180deg); }
-          .game-tile table td img.movePlayer.up {
-            -ms-transform: rotate(90deg);
-            /* IE 9 */
-            -webkit-transform: rotate(90deg);
-            /* Chrome, Safari, Opera */
-            transform: rotate(90deg); }
-          .game-tile table td img.movePlayer.down {
+          .game-tile table td img.exit.right {
             -ms-transform: rotate(270deg);
             /* IE 9 */
             -webkit-transform: rotate(270deg);
             /* Chrome, Safari, Opera */
             transform: rotate(270deg); }
+          .game-tile table td img.exit.down {
+            -ms-transform: rotate(0deg);
+            /* IE 9 */
+            -webkit-transform: rotate(0deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(0deg); }
+          .game-tile table td img.exit.left {
+            -ms-transform: rotate(90deg);
+            /* IE 9 */
+            -webkit-transform: rotate(90deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(90deg); }
+        .game-tile table td img.movePlayer {
+          content: url(/static/img/sprites/move.png); }
+          .game-tile table td img.movePlayer.up {
+            -ms-transform: rotate(180deg);
+            /* IE 9 */
+            -webkit-transform: rotate(180deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(180deg); }
+          .game-tile table td img.movePlayer.right {
+            -ms-transform: rotate(270deg);
+            /* IE 9 */
+            -webkit-transform: rotate(270deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(270deg); }
+          .game-tile table td img.movePlayer.down {
+            -ms-transform: rotate(0deg);
+            /* IE 9 */
+            -webkit-transform: rotate(0deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(0deg); }
+          .game-tile table td img.movePlayer.left {
+            -ms-transform: rotate(90deg);
+            /* IE 9 */
+            -webkit-transform: rotate(90deg);
+            /* Chrome, Safari, Opera */
+            transform: rotate(90deg); }
     .game-tile table td {
       background-color: #446d1c; }
       .game-tile table td img[data-terr="7"] {
