--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,11 +151,11 @@ footer #authors {
       background-color: #446d1c; }
   .game-tile #dialog {
     display: none;
-    position: absolute;
-    top: 40px;
+    position: fixed;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, 0);
-    width: 80%;
+    transform: translate(-50%, -50%);
+    width: 640px;
     margin: 0 auto;
     padding: 4%;
     background-color: #efefef;
@@ -175,5 +175,10 @@ footer #authors {
   height: 50px; }
   #terrain-select.game-tile td.selected {
     border: 2px solid red; }
+
+#position {
+  position: fixed;
+  bottom: 0;
+  background-color: white; }
 
 /*# sourceMappingURL=style.css.map */
