--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,8 @@ html, body {
   width: 100%; }
 
 body {
-
-}
+  width: 800px;
+  margin: 0 auto; }
 
 h1 a {
   color: black;
@@ -22,11 +22,6 @@ h1 a {
   #register input[type="submit"] {
     clear: left;
     margin-left: 150px; }
-
-#content { 
-  width: 800px;
-  margin: 0 auto;
-}
 
 footer #authors {
   float: right; }
