Added monster sprite.

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -134,6 +134,9 @@ footer #authors {
           @include sprite(move);
           @include rotation();
         }
+        &.monster {
+          @include sprite(monster);
+        }
 
       }
     }
