--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,6 +157,8 @@ footer #authors {
             -webkit-transform: rotate(90deg);
             /* Chrome, Safari, Opera */
             transform: rotate(90deg); }
+        .game-tile table td img.monster {
+          content: url(/static/img/sprites/monster.png); }
     .game-tile table td {
       background-color: #446d1c; }
   .game-tile #dialog {
